--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Nify – IA a serviço da sua liberdade</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     :root {
-      --bg: #0f0f0f;
+      --bg: #0d0d0d;
       --text: #ffffff;
       --accent: #7f5af0;
       --gray: #a1a1a1;
+      --card: #1c1c1c;
     }
     * {
       margin: 0;
@@ -21,7 +23,11 @@
       background-color: var(--bg);
       color: var(--text);
       line-height: 1.6;
-      padding: 2rem;
+      padding: 2rem 1rem;
+    }
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
     }
     header {
       text-align: center;
@@ -29,105 +35,123 @@
     }
     h1 {
       font-size: 2rem;
-      color: var(--text);
+      font-weight: 700;
       margin-bottom: 1rem;
     }
     h2 {
       font-size: 1.5rem;
-      margin-top: 2rem;
+      font-weight: 600;
       margin-bottom: 1rem;
     }
-    p {
+    p, ul {
       color: var(--gray);
+      font-size: 1rem;
       margin-bottom: 1rem;
+    }
+    ul {
+      list-style: none;
+      padding-left: 1rem;
+    }
+    ul li::before {
+      content: "• ";
+      color: var(--accent);
     }
     .cta-button {
       background-color: var(--accent);
       color: var(--text);
-      padding: 0.75rem 1.5rem;
+      padding: 0.9rem 2rem;
       border: none;
-      border-radius: 8px;
+      border-radius: 10px;
       cursor: pointer;
       font-size: 1rem;
-      transition: background-color 0.2s;
+      font-weight: 600;
+      transition: background-color 0.2s, transform 0.2s;
     }
     .cta-button:hover {
       background-color: #6c4ae0;
+      transform: scale(1.03);
+    }
+    .section-card {
+      background-color: var(--card);
+      padding: 2rem;
+      border-radius: 12px;
+      margin: 2rem auto;
+      box-shadow: 0 0 20px rgba(0,0,0,0.3);
     }
     form {
-      background-color: #1a1a1a;
-      padding: 1.5rem;
-      border-radius: 10px;
-      max-width: 500px;
-      margin: 2rem auto;
       display: flex;
       flex-direction: column;
       gap: 1rem;
     }
     input, textarea {
-      padding: 0.75rem;
-      border-radius: 6px;
+      padding: 0.85rem;
+      border-radius: 8px;
       border: none;
       background-color: #2a2a2a;
       color: var(--text);
       font-size: 1rem;
     }
+    input::placeholder, textarea::placeholder {
+      color: #888;
+    }
     footer {
       text-align: center;
       color: var(--gray);
-      font-size: 0.875rem;
+      font-size: 0.9rem;
       margin-top: 4rem;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Roteiros prontos para Reels, TikTok e Shorts que vendem de verdade</h1>
-    <p>Você escolhe o tema. A IA cria um roteiro profissional, pronto pra gravar — em menos de 24h.</p>
-    <button class="cta-button" onclick="document.getElementById('form-section').scrollIntoView({ behavior: 'smooth' })">Quero meu roteiro por R$37</button>
-  </header>
+  <div class="container">
+    <header>
+      <h1>Roteiros prontos</h1>
+      <p>Você escolhe o tema. A IA cria um roteiro profissional, pronto pra gravar — em menos de 24h.</p>
+      <button class="cta-button" onclick="document.getElementById('form-section').scrollIntoView({ behavior: 'smooth' })">Quero meu roteiro por R$37</button>
+    </header>
 
-  <section>
-    <h2>Como funciona</h2>
-    <p>1. Você escolhe o tema ou objetivo do vídeo<br>
-       2. A IA escreve o roteiro ideal (gancho + desenvolvimento + CTA)<br>
-       3. Você recebe tudo em até 24h por e-mail</p>
-  </section>
+    <section class="section-card">
+      <h2>Como funciona</h2>
+      <p>1. Você escolhe o tema ou objetivo do vídeo<br>
+         2. A IA escreve o roteiro ideal (gancho + desenvolvimento + CTA)<br>
+         3. Você recebe tudo em até 24h por e-mail</p>
+    </section>
 
-  <section>
-    <h2>O que você recebe</h2>
-    <ul>
-      <li>🎯 Gancho que prende em 3 segundos</li>
-      <li>💬 Texto para narração ou fala</li>
-      <li>📌 Instruções de cena simples</li>
-      <li>🧠 Estrutura testada com base em neurovendas</li>
-    </ul>
-  </section>
+    <section class="section-card">
+      <h2>O que você recebe</h2>
+      <ul>
+        <li>🎯 Gancho que prende em 3 segundos</li>
+        <li>💬 Texto para narração ou fala</li>
+        <li>📌 Instruções de cena simples</li>
+        <li>🧠 Estrutura testada com base em neurovendas</li>
+      </ul>
+    </section>
 
-  <section>
-    <h2>Por que a Nify?</h2>
-    <p>
-      IA treinada para copy e vídeos virais<br>
-      Entrega personalizada, não é só template<br>
-      Nada de contratar agência ou redator<br>
-      100% online, simples e direto
-    </p>
-  </section>
+    <section class="section-card">
+      <h2>Por que a Nify?</h2>
+      <ul>
+        <li>IA treinada para copy e vídeos virais</li>
+        <li>Entrega personalizada, não é só template</li>
+        <li>Nada de contratar agência ou redator</li>
+        <li>100% online, simples e direto</li>
+      </ul>
+    </section>
 
-  <section>
-    <h2>Formulário de Pedido</h2>
-    <form id="form-section" name="pedido" method="POST" data-netlify="true">
-      <input type="hidden" name="form-name" value="pedido">
-      <input type="text" name="nome" placeholder="Seu nome" required />
-      <input type="email" name="email" placeholder="Seu e-mail" required />
-      <input type="text" name="instagram" placeholder="Seu @instagram (opcional)" />
-      <textarea name="tema" rows="4" placeholder="Tema ou objetivo do vídeo" required></textarea>
-      <button type="submit" class="cta-button">Enviar pedido</button>
-    </form>
-  </section>
+    <section class="section-card" id="form-section">
+      <h2>Formulário de Pedido</h2>
+      <form name="pedido" method="POST" data-netlify="true">
+        <input type="hidden" name="form-name" value="pedido">
+        <input type="text" name="nome" placeholder="Seu nome" required />
+        <input type="email" name="email" placeholder="Seu e-mail" required />
+        <input type="text" name="instagram" placeholder="Seu @instagram (opcional)" />
+        <textarea name="tema" rows="4" placeholder="Tema ou objetivo do vídeo" required></textarea>
+        <button type="submit" class="cta-button">Enviar pedido</button>
+      </form>
+    </section>
 
-  <footer>
-    <p>© 2025 Nify – IA a serviço da sua liberdade</p>
-  </footer>
+    <footer>
+      <p>© 2025 Nify – IA a serviço da sua liberdade</p>
+    </footer>
+  </div>
 </body>
 </html>
