--- a/index.html
+++ b/index.html
@@ -2,156 +2,122 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nify – IA a serviço da sua liberdade</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Nify</title>
   <style>
-    :root {
-      --bg: #0d0d0d;
-      --text: #ffffff;
-      --accent: #7f5af0;
-      --gray: #a1a1a1;
-      --card: #1c1c1c;
-    }
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
     body {
-      font-family: 'Inter', sans-serif;
-      background-color: var(--bg);
-      color: var(--text);
-      line-height: 1.6;
+      margin: 0;
+      font-family: sans-serif;
+      background: #f5f5f5;
+      color: #111;
+    }
+    header, section {
       padding: 2rem 1rem;
+      max-width: 600px;
+      margin: auto;
     }
-    .container {
-      max-width: 800px;
-      margin: 0 auto;
-    }
-    header {
+    h1, h2 {
       text-align: center;
-      margin-bottom: 3rem;
-    }
-    h1 {
-      font-size: 2rem;
-      font-weight: 700;
       margin-bottom: 1rem;
-    }
-    h2 {
-      font-size: 1.5rem;
-      font-weight: 600;
-      margin-bottom: 1rem;
-    }
-    p, ul {
-      color: var(--gray);
-      font-size: 1rem;
-      margin-bottom: 1rem;
-    }
-    ul {
-      list-style: none;
-      padding-left: 1rem;
-    }
-    ul li::before {
-      content: "• ";
-      color: var(--accent);
-    }
-    .cta-button {
-      background-color: var(--accent);
-      color: var(--text);
-      padding: 0.9rem 2rem;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      font-size: 1rem;
-      font-weight: 600;
-      transition: background-color 0.2s, transform 0.2s;
-    }
-    .cta-button:hover {
-      background-color: #6c4ae0;
-      transform: scale(1.03);
     }
     .section-card {
-      background-color: var(--card);
+      background: white;
+      border-radius: 16px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.06);
       padding: 2rem;
-      border-radius: 12px;
-      margin: 2rem auto;
-      box-shadow: 0 0 20px rgba(0,0,0,0.3);
+      margin-bottom: 2rem;
     }
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-    }
-    input, textarea {
-      padding: 0.85rem;
-      border-radius: 8px;
+    .cta-button {
+      background: black;
+      color: white;
       border: none;
-      background-color: #2a2a2a;
-      color: var(--text);
+      padding: 0.75rem 1.25rem;
+      font-size: 1rem;
+      border-radius: 8px;
+      cursor: pointer;
+      display: inline-block;
+      text-align: center;
+      margin-top: 1rem;
+    }
+    .cta-button:hover {
+      background: #222;
+    }
+    textarea {
+      width: 100%;
+      font-size: 1rem;
+      padding: 0.75rem;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      resize: none;
+      margin-bottom: 0.5rem;
+    }
+    form input, form textarea, form select {
+      width: 100%;
+      padding: 0.75rem;
+      margin: 0.5rem 0 1rem;
+      border-radius: 8px;
+      border: 1px solid #ccc;
       font-size: 1rem;
     }
-    input::placeholder, textarea::placeholder {
-      color: #888;
-    }
-    footer {
-      text-align: center;
-      color: var(--gray);
-      font-size: 0.9rem;
-      margin-top: 4rem;
+    form button {
+      background: black;
+      color: white;
+      padding: 0.75rem;
+      border: none;
+      border-radius: 8px;
+      font-size: 1rem;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <header>
-      <h1>Roteiros prontos</h1>
-      <p>Você escolhe o tema. A IA cria um roteiro profissional, pronto pra gravar — em menos de 24h.</p>
-      <button class="cta-button" onclick="document.getElementById('form-section').scrollIntoView({ behavior: 'smooth' })">Quero meu roteiro por R$37</button>
-    </header>
 
-    <section class="section-card">
-      <h2>Como funciona</h2>
-      <p>1. Você escolhe o tema ou objetivo do vídeo<br>
-         2. A IA escreve o roteiro ideal (gancho + desenvolvimento + CTA)<br>
-         3. Você recebe tudo em até 24h por e-mail</p>
-    </section>
+  <!-- Cabeçalho -->
+  <header class="section-card">
+    <h1>Nify</h1>
+    <p style="text-align: center;">IA a serviço da sua liberdade</p>
+    <p style="text-align: center; font-weight: bold;">Roteiro profissional para Reels, TikTok ou Shorts por R$37</p>
+  </header>
 
-    <section class="section-card">
-      <h2>O que você recebe</h2>
-      <ul>
-        <li>🎯 Gancho que prende em 3 segundos</li>
-        <li>💬 Texto para narração ou fala</li>
-        <li>📌 Instruções de cena simples</li>
-        <li>🧠 Estrutura testada com base em neurovendas</li>
-      </ul>
-    </section>
+  <!-- Seção Pix -->
+  <section class="pix-section section-card">
+    <h2>Pague R$ 37 via Pix</h2>
+    <p>Escaneie o QR Code abaixo com seu app bancário:</p>
+    <img src="qrcode.png" alt="QR Code Pix" style="max-width:250px; margin:1rem auto; display:block" />
 
-    <section class="section-card">
-      <h2>Por que a Nify?</h2>
-      <ul>
-        <li>IA treinada para copy e vídeos virais</li>
-        <li>Entrega personalizada, não é só template</li>
-        <li>Nada de contratar agência ou redator</li>
-        <li>100% online, simples e direto</li>
-      </ul>
-    </section>
+    <p>Ou toque no botão abaixo para copiar o código Pix:</p>
+    <textarea id="pixCode" rows="3" readonly>
+db1cb656-7a6b-46e5-a061-e915447d3c90
+    </textarea>
+    <button class="cta-button" onclick="copyPixCode()">Copiar código Pix</button>
 
-    <section class="section-card" id="form-section">
-      <h2>Formulário de Pedido</h2>
-      <form name="pedido" method="POST" data-netlify="true">
-        <input type="hidden" name="form-name" value="pedido">
-        <input type="text" name="nome" placeholder="Seu nome" required />
-        <input type="email" name="email" placeholder="Seu e-mail" required />
-        <input type="text" name="instagram" placeholder="Seu @instagram (opcional)" />
-        <textarea name="tema" rows="4" placeholder="Tema ou objetivo do vídeo" required></textarea>
-        <button type="submit" class="cta-button">Enviar pedido</button>
-      </form>
-    </section>
+    <p>Após o pagamento, preencha o formulário abaixo:</p>
+    <a href="#form-section" class="cta-button">Já paguei, preencher briefing</a>
+  </section>
 
-    <footer>
-      <p>© 2025 Nify – IA a serviço da sua liberdade</p>
-    </footer>
-  </div>
+  <!-- Formulário de briefing -->
+  <section id="form-section" class="section-card">
+    <h2>Briefing do seu vídeo</h2>
+    <form action="https://formsubmit.co/nify.drop@gmail.com" method="POST">
+      <input type="text" name="nome" placeholder="Seu nome" required>
+      <input type="email" name="email" placeholder="Seu e-mail" required>
+      <textarea name="publico" placeholder="Quem é o público do seu vídeo?" required></textarea>
+      <textarea name="objetivo" placeholder="Qual o objetivo desse vídeo?" required></textarea>
+      <textarea name="oferta" placeholder="Se tiver uma oferta, coloque aqui"></textarea>
+      <textarea name="tom" placeholder="Quer um tom mais engraçado, sério, misterioso...?" required></textarea>
+      <textarea name="link" placeholder="Cole aqui o link de algum conteúdo de referência (se quiser)"></textarea>
+      <button type="submit">Enviar briefing</button>
+    </form>
+  </section>
+
+  <script>
+    function copyPixCode() {
+      const pix = document.getElementById("pixCode");
+      pix.select();
+      document.execCommand("copy");
+      alert("Código Pix copiado! Agora é só abrir seu app bancário e colar.");
+    }
+  </script>
+
 </body>
 </html>
