--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <h1>Conteúdo para Instagram pronto em 24h</h1>
     <h2>1 Reel + 3 Carrosséis + 3 Stories</h2>
     <p class="price">por apenas R$29</p>
-    <a href="https://forms.gle/" target="_blank" class="btn">Pedir agora (Pix)</a>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdKsPqKUrfne6LtNqh4ZO2vciDEW7CiPOBT6fIXx6fH44NAzQ/viewform?usp=dialog" target="_blank" class="btn">Pedir agora (Pix)</a>
     <footer>
       <p>© 2025 Nify. Todos os direitos reservados.</p>
     </footer>
